<resources>
    <string name="app_name">MaintenanceApp</string>
    <string name="menu_my_profile">Breakdown Request</string>
    <string name="machinno">Machine Number</string>
    <string name="title">Title</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
    <string name="suggested">Suggested Part</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggestion">Suggestion</string>
    <string name="upload">Take Part Drwing or Take Photo from Camera</string>
    <string name="submit">Creat Request</string>
    <string name="priority">Select Priority</string>
    <string name="user">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="otp">OTP</string>
    <string name="newpassword">New Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
</resources>
