<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backdroundbg"
        tools:context=".operation_manager.activity.AddBreakDownRequestActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_marginBottom="@dimen/marginleft"
                      android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/activity_add_break_machine_no"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="40dp"
                    android:elevation="@dimen/elevtion"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/textviewbg"
                    android:drawableLeft="@drawable/machineno"
                    android:drawableStart="@drawable/machineno"
                    android:hint="@string/machinno" />
            <EditText
                    android:id="@+id/activity_add_break_title"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/marginleft"
                    android:elevation="@dimen/elevtion"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/textviewbg"
                    android:drawableLeft="@drawable/title"
                    android:drawableStart="@drawable/title"
                    android:hint="@string/title" />
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:weightSum="2"
                          android:layout_height="wrap_content">
                <EditText
                        android:longClickable="false"
                        android:focusable="false"
                        android:id="@+id/activity_add_break_date"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/marginleft"
                        android:elevation="@dimen/elevtion"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/downarrow"
                        android:drawableRight="@drawable/downarrow"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:textColorHint="@android:color/darker_gray"
                        android:background="@drawable/textviewbg"
                        android:drawableLeft="@drawable/calender"
                        android:drawableStart="@drawable/calender"
                        android:hint="@string/date" />
                <EditText
                        android:longClickable="false"
                        android:focusable="false"
                        android:id="@+id/activity_add_break_time"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/marginleft"
                        android:elevation="@dimen/elevtion"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/downarrow"
                        android:drawableRight="@drawable/downarrow"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:textColorHint="@android:color/darker_gray"
                        android:background="@drawable/textviewbg"
                        android:drawableLeft="@drawable/time"
                        android:drawableStart="@drawable/time"
                        android:hint="@string/time" />

            </LinearLayout>
            <TextView
                    android:id="@+id/activity_add_break_priority"
                     android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="5dp"
                    android:visibility="visible"
                    android:drawableEnd="@drawable/downarrow"
                    android:drawableRight="@drawable/downarrow"
                    android:layout_marginBottom="@dimen/marginleft"
                    android:elevation="@dimen/elevtion"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/textviewbg"
                    android:drawableLeft="@drawable/priority"
                    android:drawableStart="@drawable/priority"
                    android:hint="@string/priority"/>

            <EditText
                    android:id="@+id/activity_add_break_suggestedpart"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/marginleft"
                    android:elevation="@dimen/elevtion"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/textviewbg"
                    android:drawableLeft="@drawable/suggested"
                    android:drawableStart="@drawable/suggested"
                    android:hint="@string/suggested" />
            <EditText
                    android:id="@+id/activity_add_break_description"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="@dimen/marginleft"
                    android:elevation="@dimen/elevtion"
                    android:gravity="start"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/textviewbg"
                    android:hint="@string/suggestion" />
            <EditText
                    android:id="@+id/activity_add_break_uploadimage"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:focusable="false"
                    android:layout_marginBottom="@dimen/marginleft"
                    android:elevation="@dimen/elevtion"
                    android:paddingRight="@dimen/marginleft"
                    android:paddingEnd="@dimen/marginleft"
                    android:drawableLeft="@drawable/camera"
                    android:drawableStart="@drawable/camera"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/textviewbg"
                    android:hint="@string/upload" />

        </LinearLayout>
    </ScrollView>
    <Button android:layout_width="match_parent"
            android:id="@+id/activity_add_break_submit"
            android:layout_marginBottom="@dimen/marginleft"
            android:layout_marginRight="@dimen/marginleft"
            android:layout_marginLeft="@dimen/marginleft"
            android:background="@drawable/buttonbg"
            android:backgroundTint="@color/colorPrimary"
            android:text="Submit"
            android:textColor="@color/white"
            android:elevation="@dimen/elevtion"
            android:layout_alignParentBottom="true"
            android:layout_height="40dp"/>
</RelativeLayout>